catalog model create

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.application.name=demo
+spring.data.mongodb.uri=mongodb+srv://LMS_Tacniz:LMS_Tacniz@lmstacniz.zcczm.mongodb.net/libraryDB?retryWrites=true&w=majority
